k8s/state/10-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: cl
  labels:
    name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-db
  template:
    metadata:
      name: postgres-db
      labels:
        name: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 256Mi
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres-db
            - name: init
              mountPath: /docker-entrypoint-initdb.d

      restartPolicy: Always
      volumes:
        - name: data
#          hostPath:
#            path: /tmp/k8s-data/postgres
#            type: DirectoryOrCreate
#          emptyDir:
#            sizeLimit: 1Gi
          persistentVolumeClaim:
            claimName: postgres-data
        - name: init
          configMap:
            name: postgres-db-init

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: cl
  labels:
    name: postgres-db
spec:
  selector:
    name: postgres-db
  ports:
    - port: 5432
      name: postgres
      targetPort: 5432
  type: ClusterIP
