k8s/state/11-kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: cl
  labels:
    name: kafka
spec:
  selector:
    matchLabels:
      name: kafka
  serviceName: kafka
  template:
    metadata:
      labels:
        name: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka-native:3.9.0
          ports:
            - containerPort: 9092
              name: kafka

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: cl
spec:
  selector:
    name: kafka
  ports:
    - port: 9092
      protocol: TCP
      name: kafka
      targetPort: 9092
  type: ClusterIP
