k8s/state/12-mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: cl
  labels:
    name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mailpit
  template:
    metadata:
      name: mailpit
      labels:
        name: mailpit
    spec:
      volumes:
        - name: config
          configMap:
            name: mailpit-config
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.22
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 1025
              protocol: TCP
              name: smtp
            - containerPort: 1110
              protocol: TCP
              name: pop3
            - containerPort: 8025
              protocol: TCP
              name: web
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: cl
  labels:
    name: mailpit
spec:
    ports:
      - name: smtp
        port: 1025
        targetPort: 1025
      - name: pop3
        port: 1110
        targetPort: 1110
      - name: web
        port: 8025
        targetPort: 8025
    selector:
        name: mailpit
