k8s/state/20-book-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: cl
  labels:
    name: book-service
spec:
  selector:
    matchLabels:
      name: book-service
  template:
    metadata:
      name: book-service
      labels:
        name: book-service
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/q/metrics"
    spec:
      volumes:
        - name: config
          configMap:
            name: book-service-config
      containers:
        - name: book-service
          image: ghcr.io/aau-ase24w-group-e/cl-book-service:1.1.0-SNAPSHOT
          # for snapshots use Always, for releases IfNotPresent can be used
#          imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /deployments/config
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 256Mi
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
#          livenessProbe:
#            httpGet:
#              path: /q/health/live
#              port: 8080
#            initialDelaySeconds: 5
#          readinessProbe:
#            httpGet:
#              path: /q/health/ready
#              port: 8080
#            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: cl
  labels:
    name: book-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    name: book-service
