k8s/state/30-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cl-api
  namespace: cl
#  annotations:
##    nginx.ingress.kubernetes.io/rewrite-target: "/$1$2"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: api.crowd-library.app
      http:
        paths:
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 8080
#          - path: /v1/(user|users)(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: user-service
#                port:
#                  number: 8080
