k8s/state/50-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cl-gateway
  namespace: cl
  annotations:
    # see https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md#enable-cors
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    #enable regex
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crowd-library-web
                port:
                  number: 80
          - path: /available-book
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 8080
          - path: "/book.*|/book-owner.*|/available-book.*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: book-service
                port:
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /lendings
            pathType: Prefix
            backend:
              service:
                name: lending-service
                port:
                  number: 8080
